==================== 2.23.4 ====================

==================== 2.23.3 ====================

==================== 2.23.2.1 ====================

==================== 2.23.2 ====================

==================== 2.23.1 ====================

==================== 2.22.1.3 ====================

==================== 2.22.1.2 ====================

==================== 2.22.1.1 ====================

==================== 2.22.1 ====================

==================== 2.22.0 ====================

==================== 2.21.92 ====================

==================== 2.21.91 ====================

==================== 2.21.90 ====================

2008-01-21  Vincent Untz  <vuntz@gnome.org>

	* workspace-switcher.c: (workspace_switcher_applet_fill): call
	pager_update() a bit later, else the set_orientation() or set_n_rows()
	calls can fail

==================== 2.21.5 ====================

2007-11-13  Christian Persch  <chpe@gnome.org>

	* window-list.glade: HIGify. Bug #490158.

==================== 2.20.1 ====================

==================== 2.20.0.1 ====================

==================== 2.20.0 ====================

==================== 2.19.92 ====================

==================== 2.19.6 ====================

2007-07-26  Jaap Haitsma  <jaap@haitsma.org>

	* GNOME_ShowDesktopApplet.xml:
	* GNOME_WindowListApplet.xml:
	* GNOME_WindowMenuApplet.xml:
	* GNOME_WorkspaceSwitcherApplet.xml:
	Use gtk-about icon i.s.o. deprectated gnome-stock-about
	Fixes bug #457148

==================== 2.19.5 ====================

2007-07-07  Vincent Untz  <vuntz@gnome.org>

	Be a bit clever and show/hide relevant stuff in the properties dialog
	depending on the window manager.
	Fix bug #345153.

	* workspace-switcher.c: (pager_update): only set the display mode if
	we're running metacity. Else, we don't know if the workspaces have
	useful names, so it's probably useless.
	(update_properties_for_wm): new, hide/show some stuff in the