@@ -122,7 +122,7 @@
 	</oaf_attribute>
 	<oaf_attribute name="name" type="string" _value="Show Desktop"/>
 	<oaf_attribute name="description" type="string" _value="Hide application windows and show the desktop"/>
-	<oaf_attribute name="panel:icon" type="string" value="gnome-fs-desktop.png"/>
+	<oaf_attribute name="panel:icon" type="string" value="user-desktop"/>
 	<oaf_attribute name="bugzilla:bugzilla" type="string" value="GNOME"/>
 	<oaf_attribute name="bugzilla:product" type="string" value="gnome-panel"/>
 	<oaf_attribute name="bugzilla:component" type="string" value="Show Desktop Button"/>
