@@ -1,3 +1,10 @@
+2008-06-27  Luca Ferretti  <elle.uca@libero.it>
+
+	* GNOME_Wncklet_Factory.server.in.in:
+	* showdesktop.c: (update_icon), (display_about_dialog):
+	Use "user-desktop" icon from fd.o naming spec instead deprecated
+	"gnome-fs-desktop".
+
 ==================== 2.23.4 ====================
 
 ==================== 2.23.3 ====================
